--- a/package.json
+++ b/package.json
@@ -15,20 +15,25 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "accordion": "^3.0.2",
     "add": "^2.0.6",
     "button": "^1.1.1",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
     "init": "^0.1.2",
     "input": "^1.0.1",
     "label": "^0.2.2",
     "lucide-react": "^0.424.0",
+    "popover": "^2.4.1",
     "react": "^18.3.1",
+    "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
