--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-VITE_EMAILJS_FAQ_FORM_PUBLIC_KEY ="iUwcDkXUsqrfT70kx"
+VITE_EMAILJS_FORM_PUBLIC_KEY ="iUwcDkXUsqrfT70kx"
 VITE_EMAILJS_FAQ_FORM_SERVICE_ID ="service_jfu3czp"
 VITE_EMAILJS_FAQ_FORM_TEMPLATE_ID ="template_0ihxiza"
+# book trip
+VITE_EMAILJS_BOOK_FORM_SERVICE_ID ="service_nxpuqeq"
+VITE_EMAILJS_BOOK_FORM_TEMPLATE_ID ="template_qtpijo5"
