feat: fix the day picker problem only needs to send her value to email js

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_EMAILJS_FORM_PUBLIC_KEY ="iUwcDkXUsqrfT70kx"
+VITE_EMAILJS_FORM_PUBLIC_KEY ="iUwcDkXUsqrfT70k"
 VITE_EMAILJS_FAQ_FORM_SERVICE_ID ="service_jfu3czp"
 VITE_EMAILJS_FAQ_FORM_TEMPLATE_ID ="template_0ihxiza"
 # book trip
