--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.25.1",
     "swiper": "^11.1.7",
     "tailwind-merge": "^2.5.2",
