--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.427.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
@@ -32,7 +33,6 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
-    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.25.1",
     "swiper": "^11.1.7",
     "tailwind-merge": "^2.5.2",
