--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
+    "i18next": "^23.14.0",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.427.0",
     "qs": "^6.13.0",
@@ -34,6 +35,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "swiper": "^11.1.7",
