--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-i18next": "^15.0.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
-    "swiper": "^11.1.7",
+    "swiper": "10.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "textarea": "^0.3.0",
